# OptiMethods

./: CMakeLists.txt  Fun1.cpp  Fun1.h  Fun2.cpp  Fun2.cu  Fun2.h  Function.cpp  Function.h  Matrix.cpp  Matrix.h  NR.cpp  NR.h  README.md  Vec.cpp  Vec.h  main.cpp  utils.h
